--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,11 @@ pnpm-debug.log*
 *.sw?
 
 #backend
+/node_modules
+/backend/node_modules
+/backend/app/node_modules
 /backend/app/config/master.key
 /backend/app/log/
 /backend/app/tmp/
-/node_modules/
+
+
