--- a/front/package.json
+++ b/front/package.json
@@ -6,7 +6,7 @@
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
-    "dev": "vue-cli-service serve"
+    "dev": "vite --port 3001"
   },
   "dependencies": {
     "core-js": "^3.8.3",
