--- a/front/package.json
+++ b/front/package.json
@@ -9,8 +9,11 @@
     "dev": "vue-cli-service serve"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-loader": "^15.9.8",
+    "vue-router": "^4.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
