--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,15 @@
-#front
-/front/node_modules/
+#frontend
+/frontend/node_modules/
+
+
+
 bundle/
 /.env
-
 
 # local env files
 .env.local
 .env.*.local
-front/.env
+frontend/.env
 
 # Log files
 npm-debug.log*
